--- a/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
+++ b/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
@@ -11,12 +11,11 @@
         <h3>Tested Supports</h3>
         <p>Any service provider that changes image sizes using the url parameter should also be compatible.</p>
 
-        <h4 class="supports-headline"><a href="https://imgproxy.net/" target="_blank">imgproxy</a> hosted by
-            FriendsOfShopware</h4>
+        <h4 class="supports-headline"><a href="https://imgproxy.net/" target="_blank">imgproxy</a> (selfhosted)</h4>
         <p class="supports-description">
             <sw-text-field label="Template example" size="small" copyable="true"
-                           value="https://img.fos.gg/x/fit/{width}/{height}/sm/0/plain/{mediaUrl}/{mediaPath}"/>
-            will become <code>https://img.fos.gg/x/fit/800/800/sm/0/plain/https://www.example.com/media/01/82/69/sasse.png</code>
+                           value="http://localhost:8080/x/fit/{width}/{height}/sm/0/plain/{mediaUrl}/{mediaPath}"/>
+            will become <code>http://localhost:8080/x/fit/800/800/sm/0/plain/https://www.example.com/media/01/82/69/sasse.png</code>
         </p>
 
         <h4 class="supports-headline"><a href="https://bunnycdn.com/" target="_blank">BunnyCDN</a></h4>
