--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -1,7 +1,6 @@
 {% if not shopware.config.FroshPlatformThumbnailProcessor.config.FixListingThumbnailSizes %}
     {{ include('@Storefront/storefront/utilities/thumbnail.html.twig') }}
 {% else %}
-{# FROSH: we are just removing max-width here, nothing more #}
 
 {# activate load per default. If it is not activated only a data-src is set instead of the src tag. #}
 {% if load is not defined %}
@@ -49,16 +48,38 @@
         {% for key, value in shopware.theme.breakpoint|reverse %}(min-width: {{ value }}px) {{ sizes[key] }}{% if not loop.last %}, {% endif %}{% endfor %}, {{ sizeFallback }}vw
     {% endapply %}{% endset %}
 {% endif %}
-<img {% if load %}src="{{ media|sw_encode_media_url }}" {% else %}data-src="{{ media|sw_encode_media_url }}" {% endif %}
-    {% if media.thumbnails|length > 0 %}
-        {% if load %}srcset="{{ srcsetValue }}" {% else %}data-srcset="{{ srcsetValue }}" {% endif %}
-        {% if sizes['default'] %}
-        sizes="{{ sizes['default'] }}"
-        {% elseif sizes|length > 0 %}
-        sizes="{{ sizesValue }}"
-        {% endif %}
+
+{% if load is same as(true) %}
+    {% if attributes.class %}
+        {% set attributes = attributes|merge({'class': 'lazyload ' ~ attributes.class}) %}
+    {% else %}
+        {% set attributes = attributes|merge({'class': 'lazyload'}) %}
     {% endif %}
-    {% for key, value in attributes %}{% if value != '' %} {{ key }}="{{ value }}"{% endif %}{% endfor %}
-/>
+
+    <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+        data-src="{{ media|sw_encode_media_url }}"
+        {% if media.thumbnails|length > 0 %}
+            data-srcset="{{ srcsetValue }}"
+            {% if sizes['default'] %}
+            data-sizes="{{ sizes['default'] }}"
+            {% elseif sizes|length > 0 %}
+            data-sizes="{{ sizesValue }}"
+            {% endif %}
+        {% endif %}
+        {% for key, value in attributes %}{% if value != '' %} {{ key }}="{{ value }}"{% endif %}{% endfor %}
+    />
+{% else %}
+    <img data-src="{{ media|sw_encode_media_url }}"
+        {% if media.thumbnails|length > 0 %}
+            data-srcset="{{ srcsetValue }}"
+            {% if sizes['default'] %}
+            sizes="{{ sizes['default'] }}"
+            {% elseif sizes|length > 0 %}
+            sizes="{{ sizesValue }}"
+            {% endif %}
+        {% endif %}
+        {% for key, value in attributes %}{% if value != '' %} {{ key }}="{{ value }}"{% endif %}{% endfor %}
+    />
+{% endif %}
 
 {% endif %}
