Replaced deprecated JS function UIEvent.initUIEvent() with 'UIEvent'

--- a/src/Resources/views/storefront/component/product/card/box-standard.html.twig
+++ b/src/Resources/views/storefront/component/product/card/box-standard.html.twig
@@ -15,6 +15,9 @@
                 {% set displayMode = 'cover' %}
             {% endif %}
 
+            {{ dump(layout) }}
+            {{ dump(sizes) }}
+
             <a href="{{ seoUrl('frontend.detail.page', {'productId': id}) }}"
                title="{{ name }}"
                class="product-image-link is-{{ displayMode }}">
