--- a/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
+++ b/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
@@ -46,5 +46,15 @@
             will become
             <code>https://token.cloudimg.io/v7/https://www.example.com/media/01/82/69/sasse.png&w=800&h=800</code>
         </p>
+
+        <h4 class="supports-headline"><a href="https://www.cloudflare.com" target="_blank">cloudflare</a></h4>
+        <blockquote>Opinion: fast and including webp</blockquote>
+        <p class="supports-description">
+            Has a lossless image optimization and big hosters have their NFS connected in their contracts directly to cloudflare<br><br>
+            <sw-text-field label="Template example" size="small" :copyable="true"
+                           value="{mediaUrl}/cdn-cgi/image/width={width},height={height}quality=100/{mediaPath}"/>
+            will become
+            <code>https://yourshop.com/cdn-cgi/image/width%3D3000%2Cheight%3D3000quality%3D75/media/64/fd/98/1624446656/ff310899329c4d94855a096a26b02d5e.jpg</code>
+        </p>
     </div>
 {% endblock %}
