--- a/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
+++ b/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
@@ -48,7 +48,7 @@
         </p>
 
         <h4 class="supports-headline"><a href="https://www.cloudflare.com" target="_blank">cloudflare</a></h4>
-        <blockquote>Opinion: many options but only for business and enterprise customers</blockquote>
+        <blockquote>Opinion: many options but only for business and enterprise customers. Has no auto detection of supported formats of visitor. So you are pinned to jpeg, webp or avif.</blockquote>
         <p class="supports-description">
             Has a lossless image optimization and big hosters have their NFS connected in their contracts directly to cloudflare<br><br>
             <sw-text-field label="Template example" size="small" :copyable="true"
