avoid metaProportion calculation if image is not loaded or broken

--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -19,7 +19,9 @@
     {% endif %}
 
     {% set metaProportion = media.metaData %}
-    {% set ratio = (metaProportion.width / metaProportion.height)|round(2, 'floor') %}
+    {% if metaProportion > 0 %}
+        {% set ratio = (metaProportion.width / metaProportion.height)|round(2, 'floor') %}
+    {% endif %}
 
     {% if layout == 'full-width' %}
         {% if ratio >= 1  %}
