--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -27,16 +27,7 @@
     {% endif %}
 
     {% set metaProportion = media.metaData %}
-    {% set ratio = 1 %}
-    {% set ratioText = '' %}
-
-    {% if metaProportion.width is defined and metaProportion.height is defined %}
-        {% set ratio = (metaProportion.width / max(metaProportion.height, 1))|round(2, 'floor') %}
-        {% set ratioText = ratio %}
-        {% if ratio < 1 %}
-            {% set ratioText = metaProportion.width ~ '/' ~  metaProportion.height %}
-        {% endif %}
-    {% endif %}
+    {% set ratio = (metaProportion.width / max(metaProportion.height, 1))|round(2, 'floor') %}
 
     {% if fullWidth %}
         {% if ratio >= 1  %}
@@ -52,7 +43,7 @@
             {% if media.thumbnails|length > 1 %}
                 data-srcset="{{ srcsetValue }}"
                 data-sizes="auto"
-                data-aspectratio="{{ ratioText }}"
+                data-aspectratio="{{ ratio }}"
                 data-parent-fit="contain"
             {% endif %}
             {% for key, value in attributes %} {{ key }}="{{ value }}"{% endfor %}
