--- a/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
+++ b/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts.html.twig
@@ -4,8 +4,7 @@
             available variables:<br>
             <b>{mediaUrl}</b>: f.e. https://cdn.test.de/<br>
             <b>{mediaPath}</b>: f.e. media/image/5b/6d/16/tea.png<br>
-            <b>{width}</b>: f.e. 800<br>
-            <b>{height}</b>: f.e. 800
+            <b>{width}</b>: f.e. 800
         </p>
 
         <h3>Tested Supports</h3>
@@ -14,8 +13,8 @@
         <h4 class="supports-headline"><a href="https://imgproxy.net/" target="_blank">imgproxy</a> (selfhosted)</h4>
         <p class="supports-description">
             <sw-text-field label="Template example" size="small" :copyable="true"
-                           value="http://localhost:8080/x/fit/{width}/{height}/sm/0/plain/{mediaUrl}/{mediaPath}"/>
-            will become <code>http://localhost:8080/x/fit/800/800/sm/0/plain/https://www.example.com/media/01/82/69/sasse.png</code>
+                           value="http://localhost:8080/x/fit/{width}/0/sm/0/plain/{mediaUrl}/{mediaPath}"/>
+            will become <code>http://localhost:8080/x/fit/800/0/sm/0/plain/https://www.example.com/media/01/82/69/sasse.png</code>
         </p>
 
         <h4 class="supports-headline"><a href="https://bunnycdn.com/" target="_blank">BunnyCDN</a></h4>
@@ -23,8 +22,8 @@
         <p class="supports-description">
             You would have to active "Bunny Optimizer" and "Manipulation Engine" in your Zone in BunnyCDN.<br><br>
             <sw-text-field label="Template example" size="small" :copyable="true"
-                           value="{mediaUrl}/{mediaPath}?width={width}&height={height}"/>
-            will become <code>https://www.example.com/media/01/82/69/sasse.png?width=800&height=800</code>
+                           value="{mediaUrl}/{mediaPath}?width={width}"/>
+            will become <code>https://www.example.com/media/01/82/69/sasse.png?width=800</code>
         </p>
 
         <h4 class="supports-headline"><a href="https://images.weserv.nl/" target="_blank">Images.weserv.nl</a></h4>
@@ -32,7 +31,7 @@
         <p class="supports-description">
             An image cache & resize service. Manipulate images on-the-fly with a worldwide cache.<br><br>
             <sw-text-field label="Template example" size="small" :copyable="true"
-                           value="https://images.weserv.nl/?url={mediaUrl}/{mediaPath}&w={width}&h={height}"/>
+                           value="https://images.weserv.nl/?url={mediaUrl}/{mediaPath}&w={width}"/>
             will become
             <code>https://images.weserv.nl/?url=https://www.example.com/media/01/82/69/sasse.png&w=800&h=800</code>
         </p>
@@ -42,9 +41,9 @@
         <p class="supports-description">
             An image cache & resize service. Manipulate images on-the-fly with a worldwide cache.<br><br>
             <sw-text-field label="Template example" size="small" :copyable="true"
-                           value="https://token.cloudimg.io/v7/{mediaUrl}/{mediaPath}&w={width}&h={height}"/>
+                           value="https://token.cloudimg.io/v7/{mediaUrl}/{mediaPath}&w={width}"/>
             will become
-            <code>https://token.cloudimg.io/v7/https://www.example.com/media/01/82/69/sasse.png&w=800&h=800</code>
+            <code>https://token.cloudimg.io/v7/https://www.example.com/media/01/82/69/sasse.png&w=800</code>
         </p>
 
         <h4 class="supports-headline"><a href="https://www.cloudflare.com" target="_blank">cloudflare</a></h4>
@@ -52,9 +51,9 @@
         <p class="supports-description">
             Has a lossless image optimization and big hosters have their NFS connected in their contracts directly to cloudflare<br><br>
             <sw-text-field label="Template example" size="small" :copyable="true"
-                           value="{mediaUrl}/cdn-cgi/image/width={width},height={height},quality=85,format=auto/{mediaPath}"/>
+                           value="{mediaUrl}/cdn-cgi/image/width={width},quality=85,format=auto/{mediaPath}"/>
             will become
-            <code>https://yourshop.com/cdn-cgi/image/width%3D3000%2Cheight%3D3000%2Cquality%3D85%2Cformat%3Dauto/media/db/f4/18/1624437000/334c0cd2b7dd465c9a35a806e8052643.jpg</code>
+            <code>https://yourshop.com/cdn-cgi/image/width%3D3000%2Cquality%3D85%2Cformat%3Dauto/media/db/f4/18/1624437000/334c0cd2b7dd465c9a35a806e8052643.jpg</code>
         </p>
     </div>
 {% endblock %}
