Updated rule to check if there is something in the list
Updated to only get a `src-set` when there are thumbnails set

--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -21,7 +21,7 @@
     {% if media.thumbnails|length > 0 %}
         {% set thumbnails = media.thumbnails|filter((v) => v.width <= metaProportion.width)|sort|reverse %}
         
-        {% if thumbnails|first.width %}
+         {% if thumbnails %}
             {# generate srcset with all available thumbnails #}
             {% set srcsetValue %}{% apply spaceless %}
                 {{ media|sw_encode_media_url }} {{ thumbnails|first.width + 1 }}w, {% for thumbnail in thumbnails %}{{ thumbnail.url | sw_encode_url }} {{ thumbnail.width }}w{% if not loop.last %}, {% endif %}{% endfor %}
