fix: sort thumbnails by size

--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -19,7 +19,7 @@
 
     {% set metaProportion = media.metaData %}
     {% if media.thumbnails|length > 0 %}
-        {% set thumbnails = media.thumbnails|filter((v) => v.width <= metaProportion.width)|sort|reverse %}
+        {% set thumbnails = media.thumbnails|filter((v) => v.width <= metaProportion.width)|sort((a, b) => a.width <=> b.width)|reverse %}
 
         {% if thumbnails %}
             {# generate srcset with all available thumbnails #}
