--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -24,7 +24,7 @@
         {% if thumbnails %}
             {# generate srcset with all available thumbnails #}
             {% set srcsetValue %}{% apply spaceless %}
-                {{ media.url }} {{ thumbnails|first.width + 1 }}w, {% for thumbnail in thumbnails %}{{ thumbnail.url }} {{ thumbnail.width }}w{% if not loop.last %}, {% endif %}{% endfor %}
+                {{ media.url|frosh_encode_url }} {{ thumbnails|first.width + 1 }}w, {% for thumbnail in thumbnails %}{{ thumbnail.url|frosh_encode_url }} {{ thumbnail.width }}w{% if not loop.last %}, {% endif %}{% endfor %}
             {% endapply %}{% endset %}
         {% endif %}
     {% endif %}
@@ -41,7 +41,7 @@
 
     {% block thumbnail_utility_img %}
         <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-            data-src="{{ media.url }}"
+            data-src="{{ media.url|frosh_encode_url }}"
             {% if srcsetValue %}
                 data-srcset="{{ srcsetValue }}"
                 data-sizes="auto"
@@ -51,7 +51,7 @@
             {% for key, value in attributes %}
                 {{ key }}="{{ value }}"
                 {% if key == 'itemprop' %}
-                    content="{{ media.url }}"
+                    content="{{ media.url|frosh_encode_url }}"
                 {% endif %}
             {% endfor %}
             {% if inlineStyle is defined %}
