--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -31,12 +31,16 @@
 
     {% set ratio = (metaProportion.width / max(metaProportion.height, 1))|round(3, 'floor') %}
 
+
+    {% set inlineStyle = "" %}
     {% if fullWidth %}
         {% if ratio >= 1  %}
-            {% set inlineStyle = "width: 100vw; height: " ~ (100 / ratio)|round(3) ~ "vw" %}
+            {% set inlineStyle = inlineStyle ~ "width: 100vw; height: " ~ (100 / ratio)|round(3) ~ "vw;" %}
         {% else %}
-            {% set inlineStyle = "width: " ~ (100 * ratio)|round(3)~ "vw; height: 100vw" %}
+            {% set inlineStyle = inlineStyle ~ "width: " ~ (100 * ratio)|round(3)~ "vw; height: 100vw;" %}
         {% endif %}
+    {% else %}
+        {% set inlineStyle = inlineStyle ~ "width: 100%; aspect-ratio: " ~ ratio|round(3) ~ ";" %}
     {% endif %}
 
     {% block thumbnail_utility_img %}
@@ -54,7 +58,7 @@
                     content="{{ media.url|frosh_encode_url }}"
                 {% endif %}
             {% endfor %}
-            {% if inlineStyle is defined %}
+            {% if inlineStyle != "" %}
                 style="{{ inlineStyle }}"
             {% endif %}
         />
