chore: add suppress HtmlRequiredAltAttribute

--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -44,6 +44,7 @@
     {% endif %}
 
     {% block thumbnail_utility_img %}
+        <!--suppress HtmlRequiredAltAttribute -->
         <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
             data-src="{{ media.url|frosh_encode_url }}"
             {% if srcsetValue %}
