feat: specify width and height

--- a/src/Resources/views/storefront/utilities/thumbnail.html.twig
+++ b/src/Resources/views/storefront/utilities/thumbnail.html.twig
@@ -51,6 +51,7 @@
                 data-aspectratio="{{ ratio }}"
                 data-parent-fit="contain"
             {% endif %}
+            width="{{ metaProportion.width }}" height="{{ metaProportion.height }}"
             {% for key, value in attributes %}
                 {{ key }}="{{ value }}"
                 {% if key == 'itemprop' %}
