fix: Adjust wordings and remove typos

--- a/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts/frosh-thumbnail-processor-info-texts.html.twig
+++ b/src/Resources/app/administration/src/frosh-thumbnail-processor-info-texts/frosh-thumbnail-processor-info-texts.html.twig
@@ -1,20 +1,20 @@
 {% block frosh_thumbnail_processor_info_texts %}
     <div class="frosh-thumbnail-processor-info-texts">
         <p>
-            Hint: You can set the Configs per SalesChannel and you must not use all variables.
+            Hint: You can set the configuration per SalesChannel and you don't need to use all variables.
         </p>
 
         <p>
             Available variables for the ThumbnailPattern:<br>
-            <b>{mediaUrl}</b>: f.e. https://cdn.test.de/<br>
-            <b>{mediaPath}</b>: f.e. media/image/5b/6d/16/tea.png<br>
-            <b>{width}</b>: f.e. 800
+            <b>{mediaUrl}</b>: e.g. https://cdn.test.de/<br>
+            <b>{mediaPath}</b>: e.g. media/image/5b/6d/16/tea.png<br>
+            <b>{width}</b>: e.g. 800
         </p>
 
         <p>
-            Find pattern in the discussions category at GitHub:<br>
+            Find patterns in the discussion category 'Patterns' of the GitHub repository:<br>
             <a href="https://github.com/FriendsOfShopware/FroshPlatformThumbnailProcessor/discussions/categories/patterns" target="_blank">
-                Github Category Patterns
+                GitHub Category 'Patterns'
             </a>
         </p>
     </div>
