feat: Adjust administration handling for test button and add some more context

--- a/src/Resources/app/administration/src/module/frosh-thumbnail-processor/test-button/style.css
+++ b/src/Resources/app/administration/src/module/frosh-thumbnail-processor/test-button/style.css
@@ -1,3 +1,7 @@
-.frosh-thumbnail-processor-testimage {
+.frosh-thumbnail-processor .testdata-container {
     margin: 20px 0;
+}
+
+#test-result {
+    margin: 10px 0;
 }
