--- a/src/Resources/app/administration/src/module/frosh-thumbnail-processor/test-button/test-button.html.twig
+++ b/src/Resources/app/administration/src/module/frosh-thumbnail-processor/test-button/test-button.html.twig
@@ -1,8 +1,15 @@
-<div>
+<sw-card class="sub-card frosh-thumbnail-processor">
     <sw-button-process
-        :isLoading="isLoading"
-        :processSuccess="isSuccessful"
-        @process-finish="finish"
-        @click="saveAndCheck"
-    >{{ btnLabel }}</sw-button-process>
-</div>
+            class="frosh-thumbnail-processor--test-button"
+            :isLoading="isLoading"
+            :processSuccess="isSuccessful"
+            @process-finish="finish"
+            @click="systemConfigSaveAll">
+        {{ btnLabel }}
+    </sw-button-process>
+
+    <div class="testdata-container">
+        <p id="test-result"></p>
+        <div id="testimage-container"></div>
+    </div>
+</sw-card>
