--- a/src/Resources/app/administration/src/module/frosh-thumbnail-processor/frosh-thumbnail-processor-info-texts/frosh-thumbnail-processor-info-texts.html.twig
+++ b/src/Resources/app/administration/src/module/frosh-thumbnail-processor/frosh-thumbnail-processor-info-texts/frosh-thumbnail-processor-info-texts.html.twig
@@ -9,6 +9,7 @@
             <b>{mediaUrl}</b>: e.g. https://cdn.test.de/<br>
             <b>{mediaPath}</b>: e.g. media/image/5b/6d/16/tea.png<br>
             <b>{width}</b>: e.g. 800
+            <b>{mediaUpdatedAt}</b>: 1716882050 (unix timestamp) or null
         </p>
 
         <p>
